Implemented Interprocess Shared Memory Notification

--- a/MessageQueueRTDServer/MessageQueueRTDServer.vcxproj.filters
+++ b/MessageQueueRTDServer/MessageQueueRTDServer.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="MessageQueueRTDServer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SharedMemory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -70,6 +73,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RTDServer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SharedMemory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
