--- a/MessageQueueRTDServer/MessageQueueRTDServer.vcxproj
+++ b/MessageQueueRTDServer/MessageQueueRTDServer.vcxproj
@@ -247,6 +247,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RTDServer.cpp" />
+    <ClCompile Include="SharedMemory.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -262,6 +263,7 @@
     <ClInclude Include="RTDServer_i.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="RTDServer.h" />
+    <ClInclude Include="SharedMemory.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Topic.h" />
